# susu_navigator

./: pathing.py  planning.md  pyproject.toml
resources/: planes.json
